Fixed sidebar overflow when reducing browser size

--- a/scripts/mystyles.css
+++ b/scripts/mystyles.css
@@ -54,7 +54,7 @@ nav {
     background-color: #EFEFEF;
     position: sticky;
     top: 0;
-    text-indent: 1em;
+    overflow: auto;
 }
 
 nav ul {
